--- a/web/style.css
+++ b/web/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root {
-  --color-default: #38d9a9;
+  --color-default: #3cc393;
   --color-hover: white;
 }
 
@@ -28,7 +28,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.5vh;
-  fill: #38d9a9;
+  fill: #3cc393;
 }
 
 .eye-hover {
@@ -107,13 +107,13 @@ p {
 
 @keyframes glow {
   0% {
-    filter: drop-shadow(0 0 5px #38d9a9) brightness(1);
+    filter: drop-shadow(0 0 5px #3cc393) brightness(1);
   }
   50% {
     filter: drop-shadow(0 0 20px #ffffff) brightness(2.5);
   }
   100% {
-    filter: drop-shadow(0 0 5px #38d9a9) brightness(1);
+    filter: drop-shadow(0 0 5px #3cc393) brightness(1);
   }
 }
 
